--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@
   .buttonsHeader {
     display: flex;
     flex-direction:row;
+    justify-content: space-evenly;
+    align-items: center;
   }
   
   li {
