--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@
   }
   
   #divHeader {
-    min-height:15vw;
+    min-height: 10vh;
     width: 100%;
     background-color:#786131;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    top: 0;
     }
   
   .logo {
@@ -27,25 +28,32 @@
   }
   
   .searchInput {
-    border-radius:10px;}
+    border-radius:7px;
+    padding: 2px;
+  
+  }
   
   .buttonsHeader {
     display: flex;
     flex-direction:row;
     justify-content: space-evenly;
     align-items: center;
-  }
+    }
   
   li {
     list-style-type: none;
   }
   
+  .homeContainer {
+    display:flex;
+    margin: 15px;
+}
   .communities {
     box-sizing:border-box;
     border: 1px solid #786131;
     border-radius: 20px;
     background-color: #f1e9a9;
-    width:200px;
+    width: 250px;
     height:250px;
     margin-left: 10px;
     ;
@@ -56,31 +64,47 @@
     border: 1px solid #786131;
     border-radius: 20px;
     background-color: #f1e9a9;
-    width:600px;
-    margin-left: 10px;
-    max-height: 80vh;
+    min-width:60vw;
+    max-width: 80vw;
+    margin-left: 80px;
+    min-height: 80vh;
     overflow-y:auto;
     overflow-x:hidden;
+    
 }
-  
-  .container {
-    display:flex;
-    flex-direction:row;
-  }
-  
-  .footerSide {
+   
+  .footer {
     box-sizing:border-box;
-    border: 1px solid #786131;
-    border-radius: 20px;
+    border-top: 1px solid #786131;
     background-color: #f1e9a9;
-    width:200px;
-    height:200px;
-    margin-left:10px;
+    width:100%;
+    height: 10px;
+    display: flex;
+    justify-content: right;
+    color: #786D55;
+    }
+
+  .container {
+    padding: 10px;
+    }
+  
+  .about {
+    margin-right:10px; 
   }
 
-  .homeContainer {
-      display:flex
+  .terms {
+    margin-right: 10px;
   }
+
+  .help {
+    margin-right: 10px;
+  }
+
+  .languages {
+    margin-right: 10px;
+  }
+
+
   /* Color Theme Swatches in Hex */
   .Teste-1-1-hex { color: #786131; }
   .Teste-1-2-hex { color: #f9e2b1; }
