--- a/styles.css
+++ b/styles.css
@@ -30,19 +30,17 @@
   .searchInput {
     border-radius:7px;
     padding: 2px;
-  
+    margin-left: 350px;
   }
   
   .buttonsHeader {
-    display: flex;
-    flex-direction:row;
-    justify-content: space-evenly;
-    align-items: center;
-    }
-  
-  li {
-    list-style-type: none;
-  }
+    display: flexbox;
+    margin-left: 400px;
+      }
+
+  .Bell {
+    
+  }    
   
   .homeContainer {
     display:flex;
@@ -53,8 +51,7 @@
     border: 1px solid #786131;
     border-radius: 20px;
     background-color: #f1e9a9;
-    width: 250px;
-    height:250px;
+    height: 35vh;
     margin-left: 10px;
     ;
   }
@@ -64,24 +61,25 @@
     border: 1px solid #786131;
     border-radius: 20px;
     background-color: #f1e9a9;
-    min-width:60vw;
-    max-width: 80vw;
+    min-width:75vw;
+    max-width: 75vw;
     margin-left: 80px;
     min-height: 80vh;
-    overflow-y:auto;
+    max-height: 80vh;
+    overflow-y:scroll;
     overflow-x:hidden;
     
 }
    
   .footer {
-    box-sizing:border-box;
+    position: static;
+    box-sizing: border-box;
     border-top: 1px solid #786131;
-    background-color: #f1e9a9;
+    background-color: #786131;
     width:100%;
-    height: 10px;
+    height: 50px;
     display: flex;
     justify-content: right;
-    color: #786D55;
     }
 
   .container {
@@ -104,6 +102,27 @@
     margin-right: 10px;
   }
 
+  .textInput {
+    border-radius: 5px;
+    border-color: #f9e2b1;
+    height: 50px;
+    width: 100%;
+    background-color:antiquewhite;
+    padding: 5px;
+  }
+
+  .posts {
+    border-radius: 5px;
+    border-color: #f9e2b1;
+    width: 100%;
+    background-color:antiquewhite;
+    padding: 10px;
+    margin-top: 10px;
+  }
+
+  li {
+    list-style-type: none;
+  }
 
   /* Color Theme Swatches in Hex */
   .Teste-1-1-hex { color: #786131; }
